# Python_Web_HW14

./: .gitignore  README.md  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: bizstyle.js
migrations/versions/: 5d8bd4a046fa_new.py
src/: schemas.py
src/config/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_contacts.py  test_service_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
