[tool.poetry]
name = "py-web-hw14"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
fastapi = "^0.110.0"
psycopg2-binary = "^2.9.9"
uvicorn = { extras = ["standart"], version = "^0.28.0" }
pydantic = { extras = ["email"], version = "^2.6.4" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = "^3.3.0"
libgravatar = "^1.0.4"
cloudinary = "^1.39.0"
python-multipart = "^0.0.9"
fastapi-limiter = "^0.1.6"
redis = "^5.0.3"
fastapi-mail = "^1.4.1"
pyjwt = "^2.8.0"
jwt = "^1.3.1"



[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.tests.dependencies]
httpx = "^0.27.0"
pytest = "^8.1.1"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^4.1.0"
jwt = "^1.3.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"